<resources>
    <string name="app_name">AndroidTraining</string>
    <string name="label_name">Nombre</string>
    <string name="label_surname">Apellidos</string>
    <string name="label_date_born">Fecha nacimiento</string>
    <string name="label_age">Edad</string>
    <string name="action_save">Guardar</string>
    <string name="action_get">Limpiar</string>
    <string name="action_clean">Borrar</string>
    <string name="label_getName">nombre</string>
    <string name="label_getSurname">apellido</string>
    <string name="action_ex01">ejercicio01</string>
    <string name="action_ex02">ejercicio02</string>
    <string name="label_descuento15">-15%</string>
    <string name="label_burguerIt">Burguer It</string>
    <string name="label_error">Error en la ejecucion de la aplicacion</string>
</resources>