<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content"
    android:orientation="horizontal"

    tools:context=".features.ex01.presentation.Ex01MainActivity">
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_getName" />
    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_getSurname" />

    <Button
        android:id="@+id/action_clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_clean" />
</LinearLayout>