<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/material_on_surface_disabled"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="horizontal"

    tools:context=".presentation.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/material_on_surface_disabled"
        android:layout_width="wrap_content"

        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"

        tools:context=".presentation.MainActivity">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:src="@drawable/ic_launcher_background"
            />


    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/material_on_surface_disabled"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context=".presentation.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_surname"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_born"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="@string/action_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>



</LinearLayout>