<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10pt"
    android:orientation="vertical"
    tools:context=".features.ex01.presentation.Ex01MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_surname" />

    <EditText
        android:id="@+id/input_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="horizontal"

        tools:context=".features.ex01.presentation.Ex01MainActivity">


        <Button
            android:id="@+id/action_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save" />

        <Button
            android:id="@+id/action_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_get" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:orientation="horizontal"

        tools:context=".features.ex01.presentation.Ex01MainActivity">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_getName" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_getSurname" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="horizontal"

            tools:context=".features.ex01.presentation.Ex01MainActivity">
            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getName" />
            <EditText
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getSurname" />

            <Button
                android:id="@+id/action_clean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_clean" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="horizontal"

            tools:context=".features.ex01.presentation.Ex01MainActivity">
            <EditText
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getName" />
            <EditText
                android:id="@+id/surname2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getSurname" />

            <Button
                android:id="@+id/action_clean2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_clean" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="horizontal"

            tools:context=".features.ex01.presentation.Ex01MainActivity">
            <EditText
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getName" />
            <EditText
                android:id="@+id/surname3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getSurname" />

            <Button
                android:id="@+id/action_clean3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_clean" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="horizontal"

            tools:context=".features.ex01.presentation.Ex01MainActivity">
            <EditText
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getName" />
            <EditText
                android:id="@+id/surname4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getSurname" />

            <Button
                android:id="@+id/action_clean4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_clean" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:orientation="horizontal"

            tools:context=".features.ex01.presentation.Ex01MainActivity">
            <EditText
                android:id="@+id/name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getName" />
            <EditText
                android:id="@+id/surname5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_getSurname" />

            <Button
                android:id="@+id/action_clean5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_clean" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>